Add delete card API call and integrate functionality across components.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_APP_BACKEND_URL=http://localhost:5000
-VITE_APP_BACKEND_URL=https://devspiration-inspiration-board-back-end.onrender.com/boards
+VITE_APP_BACKEND_URL=https://devspiration-inspiration-board-back-end.onrender.com
